# memorandum

./: MODULE.bazel  Readme.md  WORKSPACE
.github/workflows/: ci.yaml  release.yaml
backend/: BUILD  BUILD.bzl  cargo-bazel-lock.json
frontend/: BUILD  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/public/: foo.html
frontend/src/: App.tsx  EditMemo.tsx  NoMemos.tsx  index.css
frontend/src/components/: Editor.css  Editor.tsx
k8s/: backend-dev.yaml  backend.yaml  deployment-backend.yaml  deployment-frontend.yaml  frontend-dev.yaml  frontend.yaml  ingress.yaml  ns.yaml  service-backend.yaml  service-frontend.yaml
