module(name = "memorandum", version = "1.0")

bazel_dep(name = "rules_oci", version = "1.4.3")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_cc12",
    tag = "latest",
    image = "gcr.io/distroless/cc-debian12",
    platforms = ["linux/amd64", "linux/arm64/v8"],
)
use_repo(oci, "distroless_cc12")

bazel_dep(name = "rules_pkg", version = "0.9.1")